Fixes a bunch of sonarlint and IntelliJ inspections.